--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 /* header and nav layout */
 header {
   width: 100%;
+  visibility: visible !important;
   background-color: var(--background-color);
   position: relative;
   z-index: 100;
