--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,6 +257,14 @@ header {
   display: block;
 }
 
+footer {
+  visibility: hidden;
+}
+
+header {
+  visibility: hidden;
+}
+
 main pre {
   background-color: var(--overlay-background-color);
   padding: 1em;
